DictionaryFrontend: Adding Collapse Functionality Fix and Copy/Paste

--- a/service/src/main/frontend/src/css/app.css
+++ b/service/src/main/frontend/src/css/app.css
@@ -24,7 +24,7 @@
   text-align: center;
   margin-left: 10%;
   margin-right: 10%;
-  margin-top: 0.15rem;
+  margin-top: 0.35rem;
 }
 
 .subtable {
